# maykin-2fa

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml  code_quality.yml
docs/: conf.py  contributing.rst  index.rst  quickstart.rst  reference.rst  testing.rst
maykin_2fa/: __init__.py  admin.py  apps.py  checks.py  middleware.py  urls.py  views.py
maykin_2fa/api/: urls.py  views.py
maykin_2fa/locale/nl/LC_MESSAGES/: django.mo
maykin_2fa/static/maykin_2fa/css/: fixes.css
maykin_2fa/templates/maykin_2fa/: README.md  backup_tokens.html  login.html  setup.html  setup_complete.html
maykin_2fa/test/: __init__.py
testapp/: backends.py  settings.py  urls.py
tests/: conftest.py  hijack_urls.py  test_admin_login_flow.py  test_admin_patching.py  test_checks.py  test_hijack_integration.py  test_middleware.py  test_user_info_endpoint.py
tests/bad_urls/: invalid.py  missing_webauthn.py  without_admin_patch.py  wrong_order.py
