[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maykin_2fa"
version = "0.1.0"
description = "TODO"
authors = [
    {name = "Maykin Media", email = "support@maykinmedia.nl"}
]
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["TODO"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    # TODO: check if we want phonenumberslite or phonenumbers - we typically only
    # use OTP and/or hardware tokens so this may not be relevant at all.
    "django-two-factor-auth[phonenumberslite,webauthn]",
]

[project.urls]
Homepage = "https://github.com/maykinmedia/maykin_2fa"
Documentation = "http://maykin_2fa.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/maykinmedia/maykin_2fa/issues"
"Source Code" = "https://github.com/maykinmedia/maykin_2fa"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-django",
    "tox",
    "isort",
    "black",
    "flake8",
]
coverage = [
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
release = [
    "bump-my-version",
    "twine",
]

[tool.setuptools.packages.find]
include = ["maykin_2fa*"]
namespaces = false

[tool.isort]
profile = "black"
combine_as_imports = true
known_django = "django"
known_first_party="maykin_2fa"
sections=["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "testapp.settings"
markers = [
    "user_request_auth_backend: specify backend that a user has authenticated with",
]

[tool.bumpversion]
current_version = "0.1.0"
files = [
    {filename = "pyproject.toml"},
    {filename = "README.rst"},
    {filename = "docs/conf.py"},
]

[tool.coverage.report]
exclude_also = [
    "if (typing\\.)?TYPE_CHECKING:",
    "@(typing\\.)?overload",
    "class .*\\(.*Protocol.*\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "pass",
]
